--- a/Login/style.css
+++ b/Login/style.css
@@ -72,3 +72,8 @@ body{
     color: white;
     border-radius: 10px;
 }
+#button:hover{
+    cursor: pointer;
+    color: #000;
+    background: #3333ff;
+}
