--- a/Dashboard/style.css
+++ b/Dashboard/style.css
@@ -3,26 +3,33 @@
 .barra_superior {
     background-color:white;
     overflow: hidden;
-    border: black;
-    border-style: ridge;
+    border-bottom: solid 2px black;
     height: 48px;
     border-radius: 5px;
+    align-self: center;
+    width: 95%;
+    margin: auto;
+    font-weight: bolder;
 }
 .barra_superior img{
-    margin-left: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
     float: left;
     height: 45px;
     width: 45px;
 }
 
 .barra_superior a {
-    margin-left: 50px;
-    float: left;
+    margin :auto;
     color: black;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+    padding: 30px;
     font-size: 17px;
+}
+.barra_superior b {
+   left: 400px;
+   position: absolute;
+    
 }
 .barra_superior a:hover {
     background-color: darkorchid;
@@ -32,51 +39,94 @@
     background-color: darkred;
     color: white;
 }
-.barra_superior perfil{
-    right: 0;
+
+.multimedia  {
+   margin-top: 20px;
+    border-radius: 20;
+    margin: auto;
+    box-sizing: border-box;
+    
 }
 
-* {box-sizing:border-box}
+.heading {
+    padding: 10px;
+    margin: auto;
+    box-sizing: border-box;
+    background: palegoldenrod;
+    border-radius: 15px;
+    height: 80px;
+    width: 95%;
+    color: white;
+    
+}
+.title {
+    
+    text-align: center;
+    font-size: 40px;
+    font-family: sans-serif;
+    font-style: bold;
+    
+    
+}
+.fila {
 
-.SlideShow {
-  top: 50px;
-  max-width: 90%;
-  max-height: 60%;
-  position: relative;
-  margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    padding:  40px;
+  }
   
-}
+  .columna {
+    flex: 30%;
+    width: 30%;
+    padding: 10px;
+    border-radius: 20px; 
+  }
+  
+  .columnaInstruc{
+    flex: 30%;
+    padding: 20px;
+    border-radius: 20px; 
+    font-size: 2em;
+    box-sizing: border-box;
+    background: silver;
+    color: white;
+    width: 150px;
+    height: 400px;
+    border: 7px solid white;
+  }
+  .text {
+     text-align: center;
+  }
 
-.diapositivas {
-    display: none;
-    border-radius: 10px;
-}
-
-.text {
-  color: white;
-  font-size: 40px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 40px;
-  width: 100%;
-  text-align: center;
-}
-
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@-webkit-keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
+  .columna img {
+    margin-top: 20px;
+    border-radius: 20px; 
+  }
+  .columna img:hover{
+    opacity: 0.55;
+    
+  }
+  @media screen and (max-width: 800px) {
+    .columna {
+      flex: 50%;
+      max-width: 50%;
+    }
+    .columnaInstruc {
+        flex: 50%;
+        max-width: 50%;
+      }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .columna {
+      flex: 100%;
+      max-width: 100%;
+    }
+      .columnaInstruc{
+        flex: 100%;
+        max-width: 100%;
+      }
+    
+  }
 
   
