--- a/Proyecto SI/producto.css
+++ b/Proyecto SI/producto.css
@@ -8,7 +8,7 @@ body{
 }
 .login_box{
     width: 350px;
-    height: 300px;
+    height: 400px;
     background: green;
     text-align: center;
     font-display: sans-serif;
@@ -54,7 +54,7 @@ body{
     width: 90%;
     outline: none;
     height: 40px;
-    color: white;
+    color: black;
     font-size: 18px;
     text-align: center;
     vertical-align: middle;
